<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/testScreen"
        android:icon="@drawable/ic_bar_test"
        android:enabled="true"
        android:title="@string/test"/>
    <item
        android:id="@+id/page_2"
        android:icon="@drawable/ic_bar_web"
        android:enabled="true"
        android:title="@string/web"/>
    <item
        android:id="@+id/page_3"
        android:icon="@drawable/ic_bar_vocabulary"
        android:enabled="true"
        android:title="@string/vocab"/>
    <item
        android:id="@+id/page_4"
        android:icon="@drawable/ic_bar_homework"
        android:enabled="true"
        android:title="@string/homework"/>
    <item
        android:id="@+id/page_5"
        android:icon="@drawable/ic_bar_setting"
        android:enabled="true"
        android:title="@string/settings"/>
</menu>