<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    android:orientation="vertical"
    android:paddingTop="25dp"
    tools:context=".setting.TeacherSettingFragment">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_rowSpan="1"
        android:layout_columnSpan="2"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="3dp"
        android:text="@string/setting_theme"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/nightModeTeacher"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:background="@color/white"
        android:paddingLeft="25dp"
        android:paddingRight="16dp"
        android:text="@string/setting_night_mode"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:paddingLeft="16dp"
        android:paddingTop="25dp"
        android:paddingRight="16dp"
        android:paddingBottom="3dp"
        android:text="@string/setting_other"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="25dp">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_app_language"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/AppLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="TextView"
            android:textColor="@color/blue"
            android:textSize="12sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:background="@color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="25dp">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_language_of_translator"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/languageTeacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="TextView"
            android:textColor="@color/blue"
            android:textSize="12sp" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_row="6"
        android:layout_column="0" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_row="7"
        android:layout_column="0"
        android:background="@color/white">

        <Button
            android:id="@+id/logOutTeacher"
            app:backgroundTint="@color/red"
            app:rippleColor="@null"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setting_log_out"
            android:textColor="@color/design_default_color_surface"
            android:textSize="12sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_row="8"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:background="@color/white">

        <Button
            android:id="@+id/changePasswordTeacher"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="#00FFFFFF"
            android:text="@string/setting_change_password"
            android:textColor="@color/blue"
            android:textSize="11sp" />
    </FrameLayout>
</GridLayout>